Fix issue template placeholder for the version
Use quotation marks to explicitly indicate that the version is a string.

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -21,7 +21,7 @@ body:
       description: >-
         Before we start, please specify which version of RiGallery you were using
         when the bug occurs.
-      placeholder: 0.1
+      placeholder: "0.1"
     validations:
       required: true
   - type: dropdown
