--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,6 +47,7 @@ workRuntimeKtx = "2.10.0"
 zoomimageViewSketch = "1.1.1"
 #rules = "1.6.1"
 lifecycleProcess = "2.8.7"
+datastoreExt = "1.0.0"
 
 [libraries]
 # AndroidX
@@ -116,6 +117,7 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 # Datastore
 datastore-prefs = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+datastore-ext = { module = "me.msoul:datastoreext", version.ref = "datastoreExt" }
 
 # Accompanists
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
