--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 adaptive = "1.1.0"
-agp = "8.8.2"
+agp = "8.9.2"
 aire = "0.15.5"
 avifCoderCoil = "2.0.10"
 benchmarkMacroJunit4 = "1.3.4"
@@ -10,7 +10,7 @@ composeVideo = "1.2.0"
 core = "1.11.1"
 coreSplashscreen = "1.0.1"
 fuzzywuzzy = "1.4.0"
-exifinterface = "1.4.0"
+exifinterface = "1.4.1"
 graphicsShapes = "1.0.1"
 jxlCoder = "2.1.10"
 kotlin = "2.1.10"
@@ -27,12 +27,12 @@ hilt = "2.55"
 hiltCommon = "1.2.0"
 material = "1.12.0"
 material3 = "1.3.2"
-media3Exoplayer = "1.6.0"
+media3Exoplayer = "1.6.1"
 navigation-runtime-ktx = "2.8.9"
 profileinstaller = "1.4.1"
-room = "2.7.0"
+room = "2.7.1"
 accompanist = "0.37.0"
-datastore = "1.1.4"
+datastore = "1.1.4" #no upgrade to 1.1.5 there's an issue on the package
 securityCrypto = "1.1.0-alpha07"
 sketch = "4.0.5"
 startupRuntime = "1.2.0"
@@ -40,13 +40,13 @@ tensorflowLite = "2.16.1"
 tensorflowLiteTaskVision = "0.4.4"
 tensorflowLiteGpu = "2.16.1"
 #uiautomator = "2.3.0"
-composealpha = "1.8.0-rc03"
+composealpha = "1.8.0"
 kotlinxSerializationJson = "1.8.0"
-workRuntimeKtx = "2.10.0"
+workRuntimeKtx = "2.10.1"
 zoomimageViewSketch = "1.1.1"
 #rules = "1.6.1"
 lifecycleProcess = "2.8.7"
-datastoreExt = "1.0.0"
+metadataExtractor = "2.19.0"
 
 [libraries]
 # AndroidX
@@ -115,7 +115,6 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 # Datastore
 datastore-prefs = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
-datastore-ext = { module = "me.msoul:datastoreext", version.ref = "datastoreExt" }
 
 # Accompanists
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
@@ -154,6 +153,10 @@ tensorflow-lite = { module = "org.tensorflow:tensorflow-lite", version.ref = "te
 zoomimage-sketch = { module = "io.github.panpf.zoomimage:zoomimage-compose-sketch4", version.ref = "zoomimageViewSketch" }
 #androidx-rules = { group = "androidx.test", name = "rules", version.ref = "rules" }
 androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
+
+# Metadata
+metadata-extractor = { module = "com.drewnoakes:metadata-extractor", version.ref = "metadataExtractor" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
