Refactor: Improve media analysis logic
- Update `MediaDao` to use `@Upsert` without specifying the entity.
- Refactor `AnalyzerWorker` to analyze media from the database first, then from `mediaFlow` if the database is empty.
- Update `AnalysisViewModel` to retrieve all media in the database.
- Modify `AnalysisScreen` to trigger analysis even if the database has no not-analyzed media.
- In `NavigationComp` trigger media analysis on start.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,16 @@
                 />
         </provider>
 
+        <!--
+        Required for analysis worker service type:
+        - dataSync from Android 14 (API 34)
+        - mediaProcessing from Android 15 (API 35)
+        -->
+        <service
+            android:name="androidx.work.impl.foreground.SystemForegroundService"
+            android:foregroundServiceType="dataSync|mediaProcessing"
+            tools:node="merge" />
+
     </application>
 
 </manifest>
