Refactor: Separate media analysis into LocationWorker and DominantColorWorker
This commit refactors the media analysis process by splitting it into two distinct workers: `LocationWorker` for location data and `DominantColorWorker` for dominant color extraction.

- **New Workers:**
    - `LocationWorker.kt`: Handles fetching and storing location data for media items.
    - `DominantColorWorker.kt`: Handles extracting and storing dominant colors for media items.
- **ViewModel Changes (`AnalysisViewModel.kt`):**
    - Manages the lifecycle and progress of both new workers.
    - Provides methods to start, stop, and reset analysis for location and dominant color independently.
    - Exposes separate `StateFlow`s for the running state and progress of each worker (`isRunningLoc`, `progressLoc`, `isRunningDomCol`, `progressDomCol`).
- **DAO Updates (`MediaDao.kt`):**
    - Added `getMediaToAnalyzeLocation()` and `getMediaToAnalyzeDominantColor()` to fetch media items that haven't been processed for location or dominant color respectively.
    - Added `resetAnalizedMediaForLocation()` and `resetAnalizedMediaForDominantColor()` to reset analysis status for specific attributes.
    - Added `getDominantColors()` to retrieve a distinct list of dominant colors present in the database.
    - Queries for media with location now filter for `location IS NOT NULL AND location <> '-'`.
    - Queries for media with dominant color now filter for `dominantColor IS NOT NULL`.
    - `setDominantColor` and `setLocation` now only update their respective fields without modifying the `analyzed` flag.
    - `resetAnalizedMedia` now resets both `location` and `dominantColor` to `NULL`.
- **UI Updates:**
    - **`AnalysisScreen.kt`:**
        - Displays separate progress and status for location and dominant color analysis.
        - Provides individual reset buttons for location and dominant color analysis.
    - **`TagsGrid.kt` (Color Tags):**
        - Now dynamically populates color tags based

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -162,7 +162,7 @@ tensorflow-lite = { module = "org.tensorflow:tensorflow-lite", version.ref = "te
 tensorflow-lite-task-vision = { module = "org.tensorflow:tensorflow-lite-task-vision", version.ref = "tensorflowLiteTaskVision" }
 tensorflow-lite-gpu = { module = "org.tensorflow:tensorflow-lite-gpu", version.ref = "tensorflowLiteGpu" }
 
-palette = {group = "androidx.palette", name = "palette", version.ref = "palette"}
+palette = {group = "androidx.palette", name = "palette-ktx", version.ref = "palette"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
