Feat: Add Statistics Screen
This commit introduces a new Statistics Screen that displays various media statistics using charts.

- **Data Models:**
    - Added `MediaInYear`, `MediaTypeInYear`, and `MediaType` data classes in `statistics/data/MediaInYear.kt` to represent aggregated media data.
- **DAO Updates:**
    - Added new queries to `MediaDao.kt` to fetch data for the statistics screen, including:
        - Counts for favorited, trashed, ignored, and media with location.
        - List of distinct years media was taken.
        - Media count per year.
        - Media count by type (image/video) per year.
        - Overall media count by type.
        - Total counts for videos, images, and audios.
        - List of distinct media mime type subtypes.
        - Media count by a specific mime type subtype.
- **ViewModel:**
    - Created `StatisticsViewModel.kt` to fetch and expose statistics data as StateFlows from the `MediaDao`.
- **UI (StatisticsScreen.kt):**
    - Implemented `StatisticsScreen.kt` using Jetpack Compose.
    - Displays a top app bar with a back button.
    - Shows various charts:
        - Pie chart for media types (images vs. videos).
        - Column chart for media types (images vs. videos) per year (limited to 5 years in portrait, all in landscape).
        - Line chart for media types (images vs. videos) over years (limited to 5 years in portrait, all in landscape).
        - Pie chart for counts of favorited, trashed, ignored, and media with location.
    - Uses the `compose-charts` library for chart rendering.
    - Adapts chart display based on device orientation (landscape shows more data).
- **Navigation:**
    - Added `StatisticsScreen` to `Screen.kt` and `NavigationComp.kt` to enable navigation to it.
    - Added a "Statistics" option to the main app bar's dropdown menu in `AppBar.kt`.
- **Dependencies:**
    - Added `io.github.ehsannarmani:compose-charts` to `libs.versions.toml` and `app/build.gradle.kts`.
- **Utilities:**
    - Ad

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -48,6 +48,7 @@ zoomimageViewSketch = "1.1.1"
 lifecycleProcess = "2.8.7"
 metadataExtractor = "2.19.0"
 palette = "1.0.0"
+composeCharts = "0.1.7"
 
 [libraries]
 # AndroidX
@@ -163,6 +164,8 @@ tensorflow-lite-task-vision = { module = "org.tensorflow:tensorflow-lite-task-vi
 tensorflow-lite-gpu = { module = "org.tensorflow:tensorflow-lite-gpu", version.ref = "tensorflowLiteGpu" }
 
 palette = {group = "androidx.palette", name = "palette-ktx", version.ref = "palette"}
+compose-charts = {group = "io.github.ehsannarmani", name = "compose-charts", version.ref = "composeCharts"}
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
