--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,9 @@
         android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROCESSING"
         tools:ignore="SystemPermissionTypo" />
 
+    <uses-permission
+        android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <queries>
         <intent>
             <action android:name="android.intent.action.EDIT" />
